
## [Unreleased]

### Changed

- **Mudança em Monstros** de nível baixo
  - *1*: Dano base `12` -> `7`. Dano por Nível `4` -> `3`
  - *2*: Dano base `16` -> `8`. Experiência Base `16` -> `10`. Experiência por nível `6` -> `5`
  - *3*: Experiência base `40` -> `10`. Experiência por Nível `6` -> `3`.
  - *9*: Armarudra Base `40` -> `16`. Dano por Nível `13` -> `8`. Armadura por nível `5` -> `6`
## [4.0.A-BETA] - 2022-02-06

### Added

- Nome para os Inimigos `9` e `10`

### Changed

- Mana por nível das classes `Mago` e `Arquimago` foi aumentado de `10` para `15`
- Mana Base das classes `Mago`, `Arquimago`, `Domador`, `Necromante`, `Feiticeiro` e `Ilusionista` foi aumentada de `50` para `60`
- Mana por nível da classe `Ilusionista` foii amentada de `8` para `10`
- **Habilidades:**
  - *Imbuir em Veveno*: Dano base `20` -> `40`. Escala com Inteligencia `50%` -> `80%`. Dano por Nível `30` -> `60`
  - *Golpes Destemidos*: Dano base `18` -> `34`. Escala com Inteligência `50%` -> `70%`
  - *Atrás de Você*: Dano base `17` -> `90`. Escala com Inteligência `50%` -> `80%`. Dano por Nível `50` -> `30`
  - *Golpe Desleal*: Dano Base `17` -> `50`. Escala com Inteligência `50%` -> `65%`. Cura por Nível `200` -> `100`
  - *Frenesi*: Dano Base `15` -> `90`, Escala com Inteligencia: `0%` -> `80%`
  - *Avanço com Escudo*: Dano base `10` -> `50`. Cura Base `60` -> `70`. Cura escala com inteligencia `80%` -> `70%`. Custo por nível `50` -> `15`. Cura por Nível `160` -> `70`
  - *Estande de Defesa*: Custo `60` -> `20`. Escala com Inteligencia `50%` -> `70%`. Custo por nível `20` -> `15`. Dano por Nível `67` -> `90`
  - *Parede De Aço*: Custo `80` -> `45`. Escala com Inteligencia `40%` -> `70%`. Custo por Nível `30` -> `20`. Dano por Nível `130` -> `150`. Cura Por Nível `50` -> `60`
  - *Proteção Corporal*: Custo `60` -> `40`. Dano base `12` -> `50`. Dano por Nível `40` -> `60`
  - *Nada Passará*: Custo `80` -> `65`. Escala com Inteligencia `50%` -> `70%`. Custo por nível `30` -> `20`